# deepin-draw

./: .gitignore  .packit.yaml  .project.json  CHANGELOG.md  CMakeLists.txt  README.md  README.zh_CN.md  application.cpp  application.h  config.h.in  creat_branch.sh  create_branch.sh  deepin-draw.desktop  deepin-draw.pro  deploy_dep  draw.pro  imagegraphicsitem.h  install_dep  language.ts  linglong.yaml  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  org.deepin.draw.install  resource.qrc  update_ts.sh
src/: CMakeLists.txt  application.cpp  application.h  deepin-draw.txt  main.cpp
src/deepin-draw/: CMakeLists.txt  TitleIcon.qrc  drawConfig.h  main.cpp  mainwindow.cpp  mainwindow.h
src/deepin-draw/attribution/: adjustmentatrriwidget.cpp  adjustmentatrriwidget.h  attributionregister.cpp  attributionregister.h  attributionwidget.cpp  attributionwidget.h  boxlayoutwidget.cpp  boxlayoutwidget.h  cgroupbuttonwgt.cpp  cgroupbuttonwgt.h  ciconbutton.cpp  ciconbutton.h  cspline.cpp  cspline.h  groupbuttonwidget.cpp  groupbuttonwidget.h  hboxlayoutwidget.cpp  hboxlayoutwidget.h  orderwidget.cpp  orderwidget.h  positionattriwidget.cpp  positionattriwidget.h  rotateattriwidget.cpp  rotateattriwidget.h
src/deepin-draw/drawfiles/: application.cpp  application.h  dbusdraw_adaptor.cpp  dbusdraw_adaptor.h  drawConfig.h  drawinterface.cpp  drawinterface.h  mainwindow.cpp  mainwindow.h
src/deepin-draw/drawitems/: cutitem.cpp  cutitem.h  maskitem.cpp  maskitem.h
src/deepin-draw/drawtools/: ccutsizehandlerect.cpp  ccutsizehandlerect.h  ccuttool.cpp  ccuttool.h
src/deepin-draw/widgets/: dzoommenucombobox.cpp  dzoommenucombobox.h  toptoolbar.h  (+2 more)
src/drawboard/: CMakeLists.txt
src/drawshape/: cbuttonrect.cpp  cbuttonrect.h  ccuttool.cpp  ccuttool.h  cdrawparamsigleton.cpp  cdrawparamsigleton.h  cdrawscene.cpp  cdrawscene.h  cdrawtoolmanagersigleton.h  cellipsetool.cpp  cellipsetool.h  cgraphicsellipseitem.cpp  cgraphicsellipseitem.h  cgraphicsitem.cpp  cgraphicsitem.h  cgraphicsitemselectedmgr.cpp  cgraphicsitemselectedmgr.h  cgraphicslineitem.cpp  cgraphicslineitem.h  cgraphicsmasicoitem.cpp  cgraphicsmasicoitem.h  cgraphicspenitem.cpp  cgraphicspenitem.h  cgraphicspolygonalstaritem.cpp  cgraphicspolygonalstaritem.h  cgraphicspolygonitem.cpp  cgraphicspolygonitem.h  cgraphicsproxywidget.cpp  cgraphicsrectitem.cpp  cgraphicsrectitem.h  cgraphicsrotateangleitem.h  cgraphicstextitem.cpp  cgraphicstextitem.h  cgraphicstriangleitem.cpp  cgraphicstriangleitem.h  clinetool.cpp  clinetool.h  cmasicotool.h  cpentool.cpp  cpentool.h  (+21 more)
src/frame/: ccentralwidget.cpp  ccentralwidget.h  ccutwidget.h  cgraphicsview.cpp  cgraphicsview.h  clefttoolbar.cpp  clefttoolbar.h  cmultiptabbarwidget.cpp  cmultiptabbarwidget.h  commonshapewidget.cpp  commonshapewidget.h  cpenwidget.cpp  cpenwidget.h  cpicturewidget.h  ctitlewidget.cpp  cundocommands.cpp  cundocommands.h  cundoredocommand.cpp  cundoredocommand.h  cviewmanagement.cpp  cviewmanagement.h  linewidget.cpp  linewidget.h  mainwindow.cpp  mainwindow.h  polygonalstarattributewidget.cpp  polygonalstarattributewidget.h  polygonattributewidget.cpp  polygonattributewidget.h  textwidget.cpp  textwidget.h  toptoolbar.cpp  toptoolbar.h
src/icon/: icons.qrc
src/icons/: theme-icons.qrc
src/qtsingleapplication/: qtlocalpeer.h  qtsingleapplication.cpp  qtsingleapplication.h
src/res/: drawAttriRes.qrc  drawBaseRes.qrc
src/service/: cmanagerattributeservice.cpp  cmanagerattributeservice.h  colorpickerinterface.cpp  colorpickerinterface.h  dbusdraw_adaptor.cpp  dbusdraw_adaptor.h  drawinterface.cpp  drawinterface.h  dyncreatobject.cpp  dyncreatobject.h  filehander.cpp  filehander.h  service.pri
src/utils/: accessiblefunctions.h  acobjectlist.h  baseutils.cpp  baseutils.h  cddfmanager.cpp  cddfmanager.h  cvalidator.cpp  cvalidator.h  eventlogutils.cpp  eventlogutils.h  global.cpp  global.h  shortcut.cpp  shortcut.h
src/widgets/: arrowrectangle.cpp  bigcolorbutton.cpp  bigcolorbutton.h  bordercolorbutton.cpp  bordercolorbutton.h  calphacontrolwidget.cpp  calphacontrolwidget.h  ccheckbutton.cpp  ccheckbutton.h  cclickbutton.cpp  cclickbutton.h  cfontcombobox.cpp  cfontcombobox.h  ciconbutton.cpp  ciconbutton.h  cmenu.cpp  cmenu.h  colorlabel.cpp  colorlabel.h  colorpanel.h  colorslider.cpp  colorslider.h  cpushbutton.cpp  cpushbutton.h  csidewidthwidget.cpp  csidewidthwidget.h  cspinbox.cpp  cspinbox.h  csvglabel.cpp  csvglabel.h  ctextedit.cpp  ctextedit.h  dmenucombobox.cpp  dmenucombobox.h  drawthememanager.cpp  drawthememanager.h  dzoommenucombobox.cpp  dzoommenucombobox.h  editlabel.cpp  editlabel.h  (+18 more)
tests/: CMakeLists.txt  collection-coverage.sh  getMainWindow.h  main.cpp  mianwindow.h  test-prj-running.sh  test_application.cpp  test_qtestmain.cpp
tests/ci/: lcov.sh
tests/drawshape/: test_ItemTool.cpp  test_ccuttool.cpp  test_cellipsetool.cpp  test_clinetool.cpp  test_cmasicotool.cpp  test_cpentool.cpp  test_cpicturetool.cpp  test_cpolygonalstartool.cpp  test_cpolygontool.cpp  test_crecttool.cpp  test_ctexttool.cpp  test_ctriangletool.cpp
tests/frame/: test_CCentralwidget.cpp  test_CLeftToolBar.cpp  test_ItemsProperty.cpp  test_MainWindow.cpp
tests/googletest/: CMakeLists.txt
tests/service/: test_dbusdraw_adaptor.cpp
tests/testItems/: publicApi.cpp  publicApi.h  test_blurItem.cpp  test_cutItem.cpp  test_ellipseItem.cpp  test_function.cpp  test_layerItem.cpp  test_lineItem.cpp  test_penItem.cpp  test_pictureItem.cpp  test_polygonItem.cpp  test_rectItem.cpp  test_startItem.cpp  test_textItem.cpp  test_triangleItem.cpp
tests/testResource/: oldBlurItem.ddf  oldPenItem.ddf  test.ddf  testResource.qrc
tests/testUIs/: test_deleteItem.cpp  test_dialog.cpp  test_drawHelpPannel.cpp  test_itemAlignment.cpp  test_itemLayer.cpp  test_scanleScence.cpp  test_zdrawHelpPannel.cpp
tests/utils/: test_cddfmanager.cpp  test_shortCut.cpp
tests/widgets/: test_BorderColorButton.cpp  test_CAlphaControlWidget.cpp  test_CCheckButton.cpp  test_CClickButton.cpp  test_CIconButton.cpp  test_ColorLabel.cpp  test_ColorPanel.cpp  test_PushButton.cpp
(+1289 files in other folders)
